Fix stripe errors not showing

--- a/checkout/static/css/checkout.css
+++ b/checkout/static/css/checkout.css
@@ -8,3 +8,22 @@ legend {
     background: #f5f5f5;
     border-radius: 0.75rem;
 }
+
+#loading {
+	display: none;
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(22, 37, 60, 0.85);
+    z-index: 999999;
+}
+
+#loading .spinner-grow {
+    position: fixed;
+    top: 46%;
+    left: 46%;
+    height: 5rem !important;
+    width: 5rem !important;
+}
